Fixed competency name appearing underneath the smilies when name is too long

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -392,3 +392,11 @@ button i
     font-family: ArchitectsDaughter, Arial, sans-serif;
 }
 
+.review-row-name
+{
+    padding-left: 20px;
+    display: table-cell;
+    height: 50px;
+    vertical-align: middle;
+}
+
